<resources>
    <string name="app_name">Dota 2 Stats</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="radiantTeam">Radiant</string>
    <string name="score_divider">:</string>
    <string name="dire">Dire</string>
    <string name="slash">/</string>
    <string name="league_header">League</string>
    <string name="radiant_header">Radiant</string>
    <string name="duration_header">Duration</string>
    <string name="dire_header">Dire</string>
    <string name="duration_with_dots">Duration:</string>
    <string name="game_mode_with_dots">Game mode:</string>
    <string name="radiant_team">Radiant Team</string>
    <string name="hero">Hero</string>
    <string name="name">Name</string>
    <string name="kda">KDA</string>
    <string name="hero_lvl">LVL</string>
    <string name="dire_team">Dire Team</string>
    <string name="search_view_hint">Enter player name</string>
    <string name="match_info_fragment_label">Match Details</string>
    <string name="home">Home</string>
    <string name="pro_players">Pro Players</string>
    <string name="players">Players</string>
    <string name="player_profile">Player Profile</string>
    <string name="recent_matches">Recent matches</string>
    <string name="mode">Mode</string>

</resources>