<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.proMatches.ProMatchesFragment"
        android:background="@color/background">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/proMatchesSearchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin" />

        <LinearLayout
            android:id="@+id/proMatchHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/proMatchesRecView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/proMatchesSearchView">

            <androidx.cardview.widget.CardView
                style="@style/HeaderCardView"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/header_league"
                    style="@style/HeaderTextView"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/league_header"
                    android:layout_gravity="center_horizontal|center_vertical"
                    />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/HeaderCardView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/header_radiant"
                    style="@style/HeaderTextView"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/radiant_header"
                    android:layout_gravity="center_horizontal|center_vertical"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/HeaderCardView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/header_duration"
                    style="@style/HeaderTextView"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:text="@string/duration_header" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/HeaderCardView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/default_margin">

                <TextView
                    android:id="@+id/header_dire"
                    style="@style/HeaderTextView"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dire_header"
                    android:layout_gravity="center_horizontal|center_vertical"/>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/proMatchHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/proMatchesRecView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/proMatchHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:listitem="@layout/pro_match_item"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>