<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="playerViewModel"
            type="com.example.dota2stats.presentation.playerProfile.PlayerProfileViewModel" />

    </data>

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       tools:context=".presentation.playerProfile.PlayerProfileFragment">


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profileLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        >

        <ImageView
            android:id="@+id/profileAvatar"
            android:layout_width="155dp"
            android:layout_height="155dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/profile_default_margin"
            tools:src="@drawable/ic_android_black_24dp"
            />
        <TextView
            android:id="@+id/profileNickname"
            android:layout_width="@dimen/profile_view_width"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileAvatar"
            android:layout_marginTop="@dimen/profile_default_margin"
            android:text="@{playerViewModel.nickname}"
            style="@style/ProfileTextView"
            android:background="@drawable/custom_view_background"
            />
        <TextView
            android:id="@+id/profileWins"
            android:layout_width="@dimen/profile_view_width"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/profileLoses"
            app:layout_constraintTop_toBottomOf="@id/profileNickname"
            android:layout_marginTop="@dimen/profile_default_margin"
            android:text="@{playerViewModel.wins}"
            style="@style/ProfileTextView"
            android:background="@drawable/custom_view_background"
            />
        <TextView
            android:id="@+id/profileLoses"
            android:layout_width="@dimen/profile_view_width"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/profileWins"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileNickname"
            android:layout_marginTop="@dimen/profile_default_margin"
            android:text="@{playerViewModel.lose}"
            style="@style/ProfileTextView"
            android:background="@drawable/custom_view_background"
            />
        <TextView
            android:id="@+id/profileWinrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileWins"
            android:layout_marginTop="@dimen/profile_default_margin"
            tools:text="57.04%"
            style="@style/ProfileTextView"
            android:background="@drawable/custom_view_background"
            />

        <TextView
            android:id="@+id/profileRecentText"
            android:layout_width="@dimen/profile_view_width"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileWinrate"
            android:layout_marginTop="@dimen/profile_double_margin"
            android:text="@string/recent_matches"
            style="@style/ProfileTextView"
            android:background="@drawable/custom_view_background"
            android:backgroundTint="@color/orange"
            android:textColor="@color/white"
            />
        <LinearLayout
            android:id="@+id/playersHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileRecentText">

            <androidx.cardview.widget.CardView
                style="@style/HeaderCardView"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/header_hero"
                    style="@style/HeaderTextView"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hero"
                    android:layout_gravity="center_horizontal|center_vertical"
                    />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/HeaderCardView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/header_name"
                    style="@style/HeaderTextView"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:layout_gravity="center_horizontal|center_vertical"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/HeaderCardView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/header_kda"
                    style="@style/HeaderTextView"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:text="@string/kda" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/HeaderCardView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/default_margin">

                <TextView
                    android:id="@+id/header_hero_level"
                    style="@style/HeaderTextView"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hero_lvl"
                    android:layout_gravity="center_horizontal|center_vertical"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recentRecycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playersHeader"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
   </androidx.constraintlayout.widget.ConstraintLayout>
</layout>