<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.matchInfo.MatchInfoFragment">

        <TextView
            android:id="@+id/radiantTeamName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/radiantTeam"
            android:textSize="25sp"
            app:layout_constraintEnd_toStartOf="@+id/radiantScore"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/radiantScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:textSize="@dimen/match_info_text_size"
            app:layout_constraintEnd_toStartOf="@+id/divider"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/radiantTeamName"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="35" />

        <TextView
            android:id="@+id/divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/score_divider"
            android:textSize="@dimen/match_info_text_size"
            app:layout_constraintEnd_toStartOf="@+id/direScore"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/radiantScore"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/direScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:textSize="@dimen/match_info_text_size"
            app:layout_constraintEnd_toStartOf="@+id/direTeamName"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/divider"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="35" />

        <TextView
            android:id="@+id/direTeamName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/dire"
            android:textSize="@dimen/match_info_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/direScore"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/matchInfoDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:layout_constraintStart_toEndOf="@id/radiantScore"
            tools:text="45:00"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:textSize="@dimen/match_info_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/matchInfoDuration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/default_margin"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/radiantTeamPlayers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/match_info_player_item"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/direTeamPlayers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                tools:listitem="@layout/match_info_player_item"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>